flux/envs/eu-west-1/kgateway/kgateway-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kgateway
spec:
  controllerName: solo.io/gloo-gateway
