flux/envs/eu-west-1/kgateway/kgateway-gloo-gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: kgateway
spec:
  bindAddress: "::"
  bindPort: 8080
  httpGateway: {}
  useProxyProto: false
  proxyNames:
    - gateway-proxy
