flux/envs/eu-west-1/kgateway/sample-app-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: sample-app-vs
  namespace: kgateway
spec:
  virtualHost:
    domains:
      - "*"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: sample-app-fastapi-service-80
              namespace: kgateway
